--- a/index.html
+++ b/index.html
@@ -749,7 +749,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
+                              <h2>ACADEMIC</h2>
                                <h2>PLATFORM</h2>
                                <h2>VISION</h2>
                         </div>
@@ -969,8 +969,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>MAANDEEQ</h2>
-                             <h2>PLATFORM</h2>
+                            <h2>ACADEMIC</h2>
+                            <h2>PLATFORM</h2>
                             <h2>MISSION</h2>
                         </div>
                     </div>
@@ -1832,11 +1832,11 @@
                
                </div>
 
-                 <div class="container">
+                <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
+                              <h2>ACADEMIC</h2>
                                <h2>PLATFORM</h2>
                                <h2>CORE VALUES</h2>
                         </div>
@@ -2052,11 +2052,11 @@
                 </div> -->
                 </div>
 
-            <div class="container">
+               <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
@@ -2490,14 +2490,14 @@
                 </div>
 
                
-            </div>
+               </div>
 
              <div class="container">
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>ACADEMIC</h2>
+                            <h2>EXAMINATIONS</h2>
                             <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -2938,7 +2938,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EDUCATIONAL</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
@@ -3376,8 +3376,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>EXAMINATIONAL</h2>
-                            <h2>APPLICATIONS</h2>
+                            <h2>ACADEMIC</h2>
+                            <h2>EXAMINATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -3818,7 +3818,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>INSTITUTIONS</h2>
                         </div>
                     </div>
