--- a/arabic_home.html
+++ b/arabic_home.html
@@ -1851,7 +1851,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1883,7 +1883,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>SMART APPLICATIONS</p>
+                                    <p>ARABIC APPLICATIONS</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1916,7 +1916,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART APPLICATIONS</p>
+                                <p>ARABIC APPLICATIONS</p>
                                 <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     ONLINE APPLICATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1952,7 +1952,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART EXAMINATIONS</p>
+                                <p>ARABIC EXAMINATIONS</p>
                                 <h3>SCHOOLS</h3>
                                 <p style="text-align: justify;">
                                     ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -1984,7 +1984,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                    <p>SMART EXAMINATIONS</p>
+                                    <p>ARABIC EXAMINATIONS</p>
                                     <h3>INSTITUTES</h3>
                                     <p style="text-align: justify;">
                                         ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
@@ -2017,7 +2017,7 @@
                                     <a href="#"><img src="assets/img/maandeeq.png" alt=""></a>
                                 </div>
                                 <div class="properties__caption">
-                                <p>SMART EXAMINATIONS</p>
+                                <p>ARABIC EXAMINATIONS</p>
                                 <h3>UNIVERSITIES</h3>
                                 <p style="text-align: justify;">
                                     ONLINE EXAMINATIONS ARE THE BEST TOOL TO MANAGE EDUCATIONAL INSTITUTIONS EFFICIENTLY AND EFFECTIVELY.
