--- a/exams.html
+++ b/exams.html
@@ -129,7 +129,7 @@
                         <div class="row">
                             <div class="col-xl-6 col-lg-7 col-md-12">
                                 <div class="hero__caption">
-                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EXAMINATIONAL <br> MANAGEMENT INFORMATION APPLICATIONS</h1>
+                                    <h1 data-animation="fadeInLeft" data-delay="0.2s">INTEGRATED NATIONAL EXAMINATIONAL <br> MANAGEMENT INFORMATION PLATFORM</h1>
                                     <p data-animation="fadeInLeft" data-delay="0.4s" style="text-align: justify;">
                                         
                                     </P>
