--- a/english_exams.html
+++ b/english_exams.html
@@ -1628,8 +1628,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>MONTHLY</h2>
                             <h2>EXAMINATIONS</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
@@ -2068,8 +2068,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>YEARLY</h2>
-                             <h2>EXAMINATIONS</h2>
+                            <h2>EXAMINATIONS</h2>
+                             <h2>APPLICATIONS</h2>
                             <h2>PRODUCTS</h2>
                         </div>
                     </div>
