--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -778,7 +778,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -811,7 +811,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -843,7 +843,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -876,7 +876,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -909,7 +909,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -942,7 +942,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -974,7 +974,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1007,7 +1007,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1039,7 +1039,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1072,7 +1072,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1104,7 +1104,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1137,7 +1137,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1169,7 +1169,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1218,7 +1218,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1251,7 +1251,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1283,7 +1283,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1316,7 +1316,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1349,7 +1349,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1382,7 +1382,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1414,7 +1414,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1447,7 +1447,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1479,7 +1479,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1512,7 +1512,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1544,7 +1544,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1577,7 +1577,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1609,7 +1609,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                      <h3 class="pricing-price"><sup></sup>200<sub></sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
