--- a/arabic_exams.html
+++ b/arabic_exams.html
@@ -1218,7 +1218,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1251,7 +1251,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1283,7 +1283,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1316,7 +1316,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1349,7 +1349,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1382,7 +1382,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1414,7 +1414,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1447,7 +1447,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1479,7 +1479,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1512,7 +1512,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                      <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1544,7 +1544,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1577,7 +1577,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
@@ -1609,7 +1609,7 @@
                                         <!-- <p><span>(4.5)</span> based on 120</p> -->
                                     </div>
                                     <div class="price">
-                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Monthly</sub></h3>
+                                     <h3 class="pricing-price"><sup>$</sup>200<sub>/Yearly</sub></h3>
                                     </div>
                                 </div>
                                 <!-- <a href="#" class="border-btn border-btn2">Find out more</a> -->
