--- a/services.html
+++ b/services.html
@@ -325,9 +325,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
                               <h2>MONTHLY</h2>
                               <h2>PLATFORM</h2>
+                              <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
@@ -747,9 +747,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
                               <h2>YEARLY</h2>
                               <h2>PLATFORM</h2>
+                              <h2>SERVICES</h2>
                         </div>
                     </div>
                 </div>
