--- a/services.html
+++ b/services.html
@@ -1195,7 +1195,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1663,7 +1663,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
