--- a/english_services.html
+++ b/english_services.html
@@ -325,8 +325,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
-                              <h2>MONTHLY</h2>
+                             <h2>MONTHLY</h2>
+                              <h2>PLATFORM</h2>
                               <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -739,8 +739,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
                               <h2>YEARLY</h2>
+                              <h2>PLATFORM</h2>
                               <h2>SERVICES</h2>
                         </div>
                     </div>
@@ -1192,7 +1192,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1660,7 +1660,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
