--- a/arabic_services.html
+++ b/arabic_services.html
@@ -1174,7 +1174,7 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
+                            <h2>ARABIC</h2>
                             <h2>EXAMINATIONS</h2>
                         </div>
                     </div>
