--- a/arabic_products.html
+++ b/arabic_products.html
@@ -754,9 +754,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
-                            <h2>EXAMINATIONS</h2>
+                          <h2>REGISTERED</h2>
+                            <h2>ABARIC</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -771,7 +771,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1239,7 +1239,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
