--- a/english_products.html
+++ b/english_products.html
@@ -756,9 +756,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
-                            <h2>EXAMINATIONS</h2>
+                             <h2>REGISTERED</h2>
+                            <h2>ENGLISH</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -773,7 +773,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1241,7 +1241,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
