--- a/products.html
+++ b/products.html
@@ -756,8 +756,8 @@
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>ACADEMIC</h2>
+                            <h2>APPLICATIONS</h2>
                         </div>
                     </div>
                 </div>
@@ -772,7 +772,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1240,7 +1240,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
