--- a/arabic_products.html
+++ b/arabic_products.html
@@ -325,8 +325,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
-                              <h2>ARABIC</h2>
+                               <h2>ARABIC</h2>
+                              <h2>PLATFORM</h2>
                               <h2>PRODUCTS</h2>
                         </div>
                     </div>
