--- a/english_products.html
+++ b/english_products.html
@@ -326,8 +326,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                              <h2>MAANDEEQ</h2>
                               <h2>ENGLISH</h2>
+                              <h2>PLATFORM</h2>
                               <h2>PRODUCTS</h2>
                         </div>
                     </div>
