--- a/english_home.html
+++ b/english_home.html
@@ -3819,7 +3819,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ENGLISH</h2>
-                            <h2>INSTITUTIONS</h2>
+                            <h2>PLATFORMS</h2>
                         </div>
                     </div>
                 </div>
