--- a/arabic_home.html
+++ b/arabic_home.html
@@ -3820,7 +3820,7 @@
                         <div class="section-tittle text-center mb-55">
                             <h2>REGISTERED</h2>
                             <h2>ARABIC</h2>
-                            <h2>INSTITUTIONS</h2>
+                            <h2>PLATFORMS</h2>
                         </div>
                     </div>
                 </div>
