--- a/archives.html
+++ b/archives.html
@@ -323,8 +323,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>MAANDEEQ</h2>
-                            <h2>ACADEMIC</h2>
+                            <h2>ARABIC</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>ARCHIVES</h2>
                         </div>
                     </div>
@@ -761,8 +761,8 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                             <h2>MAANDEEQ</h2>
                              <h2>ENGLISH</h2>
+                            <h2>APPLICATIONS</h2>
                             <h2>ARCHIVES</h2>
                         </div>
                     </div>
@@ -1207,9 +1207,9 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>REGISTERED</h2>
-                            <h2>EDUCATIONAL</h2>
-                            <h2>EXAMINATIONS</h2>
+                            <h2>AVAILABLE</h2>
+                            <h2>APPLICATIONS</h2>
+                            <h2>ARCHIVES</h2>
                         </div>
                     </div>
                 </div>
@@ -1224,7 +1224,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </thead>
@@ -1692,7 +1692,7 @@
                                 <th>REGION</th>
                                 <th>CITY</th>
                                 <th>DISTRICT</th>
-                                <th>MODULE</th>
+                                <th>APPLICATION</th>
                                 <th>LANGUAGE</th>
                             </tr>
                         </tfoot>
