--- a/archives.html
+++ b/archives.html
@@ -1197,7 +1197,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>AVAILABLE</h2>
+                            <h2>ACADEMIC</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>ARCHIVES</h2>
                         </div>
