--- a/arabic_archives.html
+++ b/arabic_archives.html
@@ -324,7 +324,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ACADEMIC</h2>
+                            <h2>ARABIC</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>VERSIONS</h2>
                         </div>
