--- a/english_archives.html
+++ b/english_archives.html
@@ -744,7 +744,7 @@
                 <div class="row justify-content-center">
                     <div class="col-xl-7 col-lg-8">
                         <div class="section-tittle text-center mb-55">
-                            <h2>ACADEMIC</h2>
+                            <h2>ENGLISH</h2>
                             <h2>APPLICATIONS</h2>
                             <h2>VERSIONS</h2>
                         </div>
